Produce list of unknown sigla for later updating.

--- a/listeners.html
+++ b/listeners.html
@@ -6,6 +6,8 @@
 
 var VENOP = {};
 
+VENOP.siglaUnknown = {};
+
 VENOP.columns = [];
 
 VENOP.macroid = "AKfycbzJr35O5Qk4nGoJvOiJiWSTFthl_prMukYMADzLgMfQKEGv3ULLDVi4sK9XeRsiviYt";
